Added Ball and simple movement

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>My Awesome Website</title>
+    <title>Bri's Breakout</title>
     <meta name="author" content="Brianna Dieser">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
@@ -12,9 +12,11 @@
 
 <body>
   <header>
-    <h1 class="page-title">My Awesome Website</h1>
-    <p>This is some awesome text.</p>
+    <h1 class="page-title">Bri's Breakout</h1>
+    <p>Yooo, a cool game!</p>
   </header>
+
+  <canvas id="myCanvas" width="480" height="320"></canvas>
 
   <script src="scripts/main.js"></script>
 </body>
